# ailed-chess

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_improvement.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/ailed/psyche/: __init__.py  analysis.py  calculator.py  config.py
src/ailed/uci/: eq_curve.py  move_selector.py  selection_config.py
src/ailed_chess/: __init__.py
src/ailed_chess/psyche/: __init__.py  calculator.py
src/ailed_chess/uci/: __init__.py  move_selector.py
tests/unit/: test_move_selector.py  test_psyche.py  test_psyche_replay.py
